12/14/11 #3181, change requests for sim-sharing id dialog
12/13//1 #3175, decouple start and end drag functions in sim-sharing drag handlers, provide convenience methods for specifying that they are identical
12/13/11 #3181, add sim-sharing configurations, for specifying study name, input dialog preferences, etc.
12/13/11 #3175, standardize event for attempt to interactive with non-interactive component
12/13/11 #3175, overhaul sim-sharing drag handlers to support optional functions for start/end/drag;
12/9/11 #3166, added sponsor prototype
12/9/11 #3166, better encapsulation of KSU credits window, in preparation for adding a similar sponsorship window
12/7/11 #3179, add additional country-specific locales for Spanish
12/5/11 #3174, move sim-sharing strings to one class (SimSharingStrings) with inner classes that group strings by their function in sim-sharing events
12/5/11 #3175 switched from required constructor args to optional SimSharingEventArgs for sim-sharing drag handlers
12/5/11 #3136 fix sim-sharing processing of program args so that "-study -dev" doesn't result in studyName="-dev"
12/5/11 #3171 catch EOFException that occurs when sim-sharing server isn't running, log as severe
12/5/11 #3136, use java.util.logging instead of System.out throughout sim-sharing
12/5/11 #3175 switch to subclassing for sim-sharing drag handlers
12/5/11 #3175, add "object" parameter to sim-sharing drag handlers, add x,y params to SimSharingEvents drag handler
12/5/11 Added a getter to make it possible to override backgrounds
12/2/11 #3174, create sim-strings "objects", "actions" and "parameters" classes, for encapulating string literals; use throughout phetcommon
12/1/2011 Created integerproperty package by copying doubleproperty package
11/28/2011 Factored out server to handle strings vs serialized objects
11/28/2011 Parameterized IActor on message types to support both String and serialized messages