@@ -22,9 +22,9 @@ import edu.colorado.phet.common.phetcommon.application.ModuleObserver;
 import edu.colorado.phet.common.phetcommon.application.PhetApplication;
 import edu.colorado.phet.common.phetcommon.resources.PhetCommonResources;
 import edu.colorado.phet.common.phetcommon.simsharing.SimSharingEvents;
-import edu.colorado.phet.common.phetcommon.simsharing.components.ResearchMenu;
 import edu.colorado.phet.common.phetcommon.simsharing.components.SimSharingJMenu;
 import edu.colorado.phet.common.phetcommon.simsharing.components.SimSharingJMenuItem;
+import edu.colorado.phet.common.phetcommon.simsharing.components.SimSharingLogMenuItem;
 import edu.colorado.phet.common.phetcommon.updates.ManualUpdatesManager;
 import edu.colorado.phet.common.phetcommon.view.PhetFrame;
 import edu.colorado.phet.common.phetcommon.view.util.PhetOptionPane;
@@ -87,7 +87,7 @@ public class HelpMenu extends SimSharingJMenu implements ModuleObserver {
         //If in sim sharing, show a menu item that allows the user to access the event log in case they need to send it manually
         if ( SimSharingEvents.isEnabled() ) {
             addSeparator();
-            add( new ResearchMenu( phetFrame ) );
+            add( new SimSharingLogMenuItem( phetFrame ) );
         }
 
         //----------------------------------------------------------------------
